delete-pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delete-pod
  template:
    metadata:
      labels:
        app: delete-pod
    spec:
      containers:
        - name: delete-pod
          image: azimiali/server-delete:v3
          # You can also use IfNotPresent but it might lead to old images
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3030
