get-pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: get-pod
  template:
    metadata:
      labels:
        app: get-pod
    spec:
      containers:
        - name: get-pod
          image: azimiali/server-get:v3
          # You can also use IfNotPresent but it might lead to old images
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3030
