mongo-pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-pod
  template:
    metadata:
      labels:
        app: mongo-pod
    spec:
      containers:
        - name: mongo-pod
          image: mongo
          ports:
            - containerPort: 27017
