post-pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-pod
  template:
    metadata:
      labels:
        app: post-pod
    spec:
      containers:
        - name: post-pod
          image: azimiali/server-post:latest
          # You can also use IfNotPresent but it might lead to old images
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3030
