delete-service.yml
apiVersion: v1
kind: Service
metadata:
  name: delete-service
spec:
  type: ClusterIP
  ports:
    - name: delete-service
      port: 8080
      targetPort: 3030
      protocol: TCP
  selector:
    app: delete-pod
