frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  ports:
    - name: frontend-service
      port: 8080
      targetPort: 3030
      protocol: TCP
  selector:
    app: frontend-pod
