get-service.yml
apiVersion: v1
kind: Service
metadata:
  name: get-service
spec:
  type: ClusterIP
  ports:
    - name: get-service
      port: 8080
      targetPort: 3030
      protocol: TCP
  selector:
    app: get-pod
