mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  type: ClusterIP
  ports:
    - name: mongo-pod
      port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    app: mongo-pod
