post-service.yml
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  type: ClusterIP
  ports:
    - name: post-service
      port: 8080
      targetPort: 3030
      protocol: TCP
  selector:
    app: post-pod
