put-service.yml
apiVersion: v1
kind: Service
metadata:
  name: put-service
spec:
  type: ClusterIP
  ports:
    - name: put-service
      port: 8080
      targetPort: 3030
      protocol: TCP
  selector:
    app: put-pod
