configmap.yml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-controller
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      internal;
      rewrite ^ $original_uri break;
    nginx.ingress.kubernetes.io/server-snippet: |
      location /api/does/not/matter/much {
        if ( $request_method = GET) {
          set $target_destination '/_get';
        }
        if ( $request_method = POST) {
          set $target_destination '/_post';
        }
        if ( $request_method = PUT) {
          set $target_destination '/_put';
        }
        if ( $request_method = DELETE) {
          set $target_destination '/_delete';
        }
        set $original_uri $uri;
        rewrite ^ $target_destination last;
      }
spec:
  ingressClassName: nginx
  rules:
  - host: myserviceb.foo.org
    http:
      paths:
      - path: /_get
        backend:
          serviceName: get-service
          servicePort: 8080
      - path: /_post
        backend:
          serviceName: post-service
          servicePort: 8080
      - path: /_put
        backend:
          serviceName: put-service
          servicePort: 8080
      - path: /_delete
        backend:
          serviceName: delete-service
          servicePort: 8080
